--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@ body { margin:0; background:#eee; display:flex; justify-content:center; align-it
 <body>
 
 <div id="flipbook">
-  <div class="page" style="background-image:url('pages/page-01.jpg');"></div>
-  <div class="page" style="background-image:url('pages/page-02.jpg');"></div>
-  <div class="page" style="background-image:url('pages/page-03.jpg');"></div>
-  <div class="page" style="background-image:url('pages/page-04.jpg');"></div>
-  <div class="page" style="background-image:url('pages/page-05.jpg');"></div>
-  <div class="page" style="background-image:url('pages/page-06.jpg');"></div>
-  <div class="page" style="background-image:url('pages/page-07.jpg');"></div>
-  <div class="page" style="background-image:url('pages/page-08.jpg');"></div>
+  <div class="page" style="background-image:url(https://oobiofficial.speedgabia.com/test/pages/page-01.jpg);"></div>
+  <div class="page" style="background-image:url(https://oobiofficial.speedgabia.com/test/pages/page-02.jpg);"></div>
+  <div class="page" style="background-image:url(https://oobiofficial.speedgabia.com/test/pages/page-03.jpg);"></div>
+  <div class="page" style="background-image:url(https://oobiofficial.speedgabia.com/test/pages/page-04.jpg);"></div>
+  <div class="page" style="background-image:url(https://oobiofficial.speedgabia.com/test/pages/page-05.jpg);"></div>
+  <div class="page" style="background-image:url(https://oobiofficial.speedgabia.com/test/pages/page-06.jpg);"></div>
+  <div class="page" style="background-image:url(https://oobiofficial.speedgabia.com/test/pages/page-07.jpg);"></div>
+  <div class="page" style="background-image:url(https://oobiofficial.speedgabia.com/test/pages/page-08.jpg);"></div>
 </div>
 
 <script>
@@ -52,3 +52,4 @@ $(document).ready(function(){
 
 </body>
 </html>
+
